// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDialog Basic 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <div
      class="SelectDialog-headerContent"
      slot="header"
    >
      <ui5-title
        class="SelectDialog-title"
        level="H2"
        ui5-title=""
      />
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-input"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </div>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      data-sap-ui-fastnavgroup="true"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    />
    <div
      class="SelectDialog-footer"
      slot="footer"
    >
      <ui5-button
        design="Transparent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </div>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog MultiSelect 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    on-desktop=""
    open=""
    style="z-index: 106; display: flex; top: 384px; left: 512px;"
    ui5-dialog=""
  >
    <div
      class="SelectDialog-headerContent"
      slot="header"
    >
      <ui5-title
        class="SelectDialog-title"
        level="H2"
        ui5-title=""
      />
      <ui5-button
        class="SelectDialog-clearBtn"
        design="Transparent"
        ui5-button=""
      >
        Clear
      </ui5-button>
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-input"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </div>
    <div
      class="Toolbar-outerContainer Toolbar-info SelectDialog-infoBar"
    >
      <div
        class="Toolbar-toolbar"
        data-component-name="ToolbarContent"
      >
        <div
          class="Toolbar-childContainer"
          data-component-name="ToolbarChildContainer"
        >
          <span
            class="Text-text"
          >
            Selected: 2
          </span>
        </div>
      </div>
    </div>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      data-sap-ui-fastnavgroup="true"
      growing="None"
      mode="MultiSelect"
      separators="All"
      ui5-list=""
    >
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="0"
        description="description0"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="1"
        description="description1"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="2"
        description="description2"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="3"
        description="description3"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        _mode="MultiSelect"
        actionable=""
        additional-text-state="None"
        data-li="4"
        description="description4"
        has-border=""
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
    <div
      class="SelectDialog-footer"
      slot="footer"
    >
      <ui5-button
        design="Emphasized"
        ui5-button=""
      >
        Select
      </ui5-button>
      <ui5-button
        design="Transparent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </div>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog confirmButtonText 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <div
      class="SelectDialog-headerContent"
      slot="header"
    >
      <ui5-title
        class="SelectDialog-title"
        level="H2"
        ui5-title=""
      />
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-input"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </div>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      data-sap-ui-fastnavgroup="true"
      growing="None"
      mode="MultiSelect"
      separators="All"
      ui5-list=""
    />
    <div
      class="SelectDialog-footer"
      slot="footer"
    >
      <ui5-button
        design="Emphasized"
        ui5-button=""
      >
        Exterminate
      </ui5-button>
      <ui5-button
        design="Transparent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </div>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog with children 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <div
      class="SelectDialog-headerContent"
      slot="header"
    >
      <ui5-title
        class="SelectDialog-title"
        level="H2"
        ui5-title=""
      />
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-input"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </div>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      data-sap-ui-fastnavgroup="true"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    >
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="0"
        description="description0"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="1"
        description="description1"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="2"
        description="description2"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="3"
        description="description3"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="4"
        description="description4"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
    <div
      class="SelectDialog-footer"
      slot="footer"
    >
      <ui5-button
        design="Transparent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </div>
  </ui5-dialog>
</DocumentFragment>
`;

exports[`SelectDialog with headerText 1`] = `
<DocumentFragment>
  <ui5-dialog
    class="SelectDialog-dialog"
    data-component-name="SelectDialog"
    ui5-dialog=""
  >
    <div
      class="SelectDialog-headerContent"
      slot="header"
    >
      <ui5-title
        class="SelectDialog-title"
        level="H2"
        ui5-title=""
      >
        Select Dialog
      </ui5-title>
      <ui5-input
        accessible-name="Search"
        class="SelectDialog-input"
        placeholder="Search"
        type="Text"
        ui5-input=""
        value=""
        value-state="None"
      >
        <ui5-icon
          accessible-name="Search"
          class="SelectDialog-inputIcon"
          name="search"
          slot="icon"
          title="Search"
          ui5-icon=""
        />
      </ui5-input>
    </div>
    <ui5-list
      accessible-role="list"
      busy-delay="1000"
      data-sap-ui-fastnavgroup="true"
      growing="None"
      mode="SingleSelect"
      separators="All"
      ui5-list=""
    >
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="0"
        description="description0"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product0
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="1"
        description="description1"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product1
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="2"
        description="description2"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product2
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="3"
        description="description3"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product3
      </ui5-li>
      <ui5-li
        actionable=""
        additional-text-state="None"
        data-li="4"
        description="description4"
        has-title=""
        type="Active"
        ui5-li=""
      >
        Product4
      </ui5-li>
    </ui5-list>
    <div
      class="SelectDialog-footer"
      slot="footer"
    >
      <ui5-button
        design="Transparent"
        ui5-button=""
      >
        Cancel
      </ui5-button>
    </div>
  </ui5-dialog>
</DocumentFragment>
`;
